# c_todo_list

./: CMakeLists.txt  LICENSE.md  README.md  io.c  main.c  todo.c  todo.h
src/: io.h  main.c  todo.h
tasks/: tasks.txt
tests/: test_io.c  test_todo.c
